src/core-crm/objects/Pending_Registration__c/Pending_Registration__c.object-meta.xml
<CustomObject>
    <description>This represents an ongoing checkout session before successful registration</description>
    <label>Pending Registration</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>