src/core-crm/objects/Pending_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to the learner that have an ongoing checkout session</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pending Registrations</relationshipLabel>
    <relationshipName>Pending_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>