src/core-crm/objects/Pending_Registration__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to the course offering chosen on checkout</description>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Pending Registrations</relationshipLabel>
    <relationshipName>Pending_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>