src/core-crm/objects/Pending_Registration__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>This is the exact time the learner clicked &apos;Register&apos; button</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>